<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.upm.alberto_martin.productlist.TablaCreadaAMostrar"
    android:background="@color/colorFondoApp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pantalla_tabla_creada_amostrar"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/colorTitulosActividades"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hoy voy a comprar:"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listViewProductos"
                android:layout_gravity="center_horizontal"

                android:foreground="#e7f8efef" />
            <!-- android:entries="@array/frutasyverduras"-->
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cancelar"
                android:id="@+id/btnCancelarTablaCreada"
                android:layout_weight="0.2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_aceptar"
                android:id="@+id/btnAceptarTablaCreada"
                android:layout_weight="0.2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
